adding an empty private settings file

--- a/.env.settings
+++ b/.env.settings
@@ -41,3 +41,11 @@ WEB_CONCURRENCY=1
 
 # incomplete #
 CURRENT_UPLOAD_SERVER='uploads3'
+
+RECAPTCHA_ON=true
+
+GOOGLE_ANALYTICS_ON=true
+
+COINHIVE_ON=true
+
+ZOPIM_ON=true
