--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lob": "^3.9.0",
     "lodash": "^4.17.4",
     "lusca": "^1.4.1",
+    "mail-listener2": "^0.3.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.20.0",
     "mongoose": "^4.6.6",
