--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "node-ffprobe": "^1.2.2",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^3.1.7",
+    "nodemailer-mailgun-transport": "^1.3.6",
     "nodemon": "^1.11.0",
     "object-sizeof": "^1.2.0",
     "passport": "0.3.2",
