--- a/.env.private
+++ b/.env.private
@@ -6,6 +6,9 @@ PEWTUBE_VERIFY_EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_ADDRESS=
 
+MAILGUN_API_KEY='exampleApiKey14134'
+MAILGUN_DOMAIN='example.domain.com'
+
 RECAPTCHA_SITEKEY=
 RECAPTCHA_SECRETKEY=
 
