turned off mailscript on start

--- a/.env.settings
+++ b/.env.settings
@@ -2,6 +2,10 @@ LIVESTREAM_APP=false
 FILE_HOST=false
 FRONTEND=true
 
+# mail listening scripts
+EMAIL_LISTENER_ON=false
+SAVE_SEEN_EMAILS=false
+
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
@@ -36,8 +40,6 @@ MONGO_URI='mongodb://localhost:27017/april15pewtube'
 
 # set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
 WEB_CONCURRENCY=1
-
-
 
 # incomplete #
 CURRENT_UPLOAD_SERVER='uploads3'
