--- a/.env.settings
+++ b/.env.settings
@@ -6,6 +6,8 @@ FRONTEND=true
 EMAIL_LISTENER_ON=false
 SAVE_SEEN_EMAILS=false
 
+CACHING_ON=true
+
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
