almost done editing

--- a/.env.settings
+++ b/.env.settings
@@ -6,7 +6,7 @@ FRONTEND=true
 EMAIL_LISTENER_ON=false
 SAVE_SEEN_EMAILS=false
 
-CACHING_ON=true
+CACHING_ON=off
 
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
