set mongoose debug conditionally

--- a/.env.settings
+++ b/.env.settings
@@ -34,6 +34,8 @@ META_IMAGE='https://pew.tube/full_size_logo.jpg'
 
 ## TECHNICAL ITEMS ##
 
+MONGOOSE_DEBUG=off
+
 NODE_ENV='development'
 
 MONGODB_URI='mongodb://localhost:27017/april16pewtube'
