--- a/.env.settings
+++ b/.env.settings
@@ -8,6 +8,8 @@ SAVE_SEEN_EMAILS=false
 
 CACHING_ON=off
 
+SERVE_UPLOADS_PATH='../pewdietube/uploads'
+
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
