--- a/.env.settings
+++ b/.env.settings
@@ -8,7 +8,10 @@ SAVE_SEEN_EMAILS=false
 
 CACHING_ON=off
 
-SERVE_UPLOADS_PATH='../pewdietube/uploads'
+UPLOAD_URL='/upload'
+
+# set where files are served via express and saved to
+SERVE_AND_SAVE_FILES_DIRECTORY='/uploads'
 
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
