--- a/.env.settings
+++ b/.env.settings
@@ -11,7 +11,7 @@ CACHING_ON=off
 UPLOAD_URL='/upload'
 
 # set where files are served via express and saved to
-SERVE_AND_SAVE_FILES_DIRECTORY='/uploads'
+SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
 
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
