allow locally served files

--- a/.env.settings
+++ b/.env.settings
@@ -28,7 +28,8 @@ FRONTEND_SERVER=''
 UPLOAD_TO_B2=false
 
 # optional way to store files on external drive
-LOCAL_BACKUP='/Volumes/8TB/uploads'
+LOCAL_BACKUP_DIRECTORY='/Volumes/8TB/uploads/uploads'
+LOCAL_BACKUP_ON='true'
 
 # custom fraud detection module
 CUSTOM_FRAUD_DETECTION=false
