log location of logs

--- a/.env.settings
+++ b/.env.settings
@@ -8,9 +8,10 @@ SAVE_SEEN_EMAILS=false
 
 CACHING_ON=off
 
+# endpoint to hit during uploads
 UPLOAD_URL='/upload'
 
-# set where files are served via express and saved to
+# set where files are served via express and saved to during upload
 SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
 
 # set where the files themselves will be served from (/uploads is for serving from local machine)
