turn off local backup

--- a/.env.settings
+++ b/.env.settings
@@ -30,7 +30,7 @@ UPLOAD_TO_B2=false
 
 # optional way to store files on external drive
 LOCAL_BACKUP_DIRECTORY='/Volumes/8TB/uploads/uploads'
-LOCAL_BACKUP_ON='true'
+LOCAL_BACKUP_ON='false'
 
 # custom fraud detection module
 CUSTOM_FRAUD_DETECTION=false
