--- a/.env.settings
+++ b/.env.settings
@@ -2,21 +2,27 @@ LIVESTREAM_APP=false
 FILE_HOST=false
 FRONTEND=true
 
-# mail listening scripts
-EMAIL_LISTENER_ON=false
-SAVE_SEEN_EMAILS=false
 
-CACHING_ON=off
-
+## FRONTEND SETTINGS ##
 # endpoint to hit during uploads
 UPLOAD_URL='/upload'
-
-# set where files are served via express and saved to during upload
-SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
 
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
+## CACHING SETTINGS ##
+CACHING_ON=off
+
+# custom fraud detection module
+CUSTOM_FRAUD_DETECTION=false
+
+# meta tags
+META_DESCRIPTION='PewTube - The world's most creator friendly media hosting'
+META_IMAGE='https://pew.tube/full_size_logo.jpg'
+
+
+
+## FILEHOST SETTINGS ##
 # sets the thumbnail server that will be posted to during editing of thumbnails for uploads and user ( to separate file hosting from the frontend)
 # if this is an empty string it will use the local route (aka api/upload/${upload.uniqueTag}/edit )
 THUMBNAIL_SERVER=
@@ -25,19 +31,17 @@ THUMBNAIL_SERVER=
 # if this is an empty string it will use the local route
 FRONTEND_SERVER=''
 
+ALLOW_COR='false'
+
 # upload files to B2 hosting
 UPLOAD_TO_B2=false
 
-# optional way to store files on external drive
-LOCAL_BACKUP_DIRECTORY='/Volumes/8TB/uploads/uploads'
-LOCAL_BACKUP_ON='false'
 
-# custom fraud detection module
-CUSTOM_FRAUD_DETECTION=false
 
-# meta tags
-META_DESCRIPTION='PewTube - The world's most creator friendly media hosting'
-META_IMAGE='https://pew.tube/full_size_logo.jpg'
+# mail listening scripts
+EMAIL_LISTENER_ON=false
+SAVE_SEEN_EMAILS=false
+
 
 ## TECHNICAL ITEMS ##
 
@@ -55,6 +59,7 @@ WEB_CONCURRENCY=1
 # incomplete #
 CURRENT_UPLOAD_SERVER='uploads3'
 
+## WIDGETS ##
 RECAPTCHA_ON=true
 
 GOOGLE_ANALYTICS_ON=true
