--- a/.env.settings
+++ b/.env.settings
@@ -20,6 +20,8 @@ CUSTOM_FRAUD_DETECTION=false
 META_DESCRIPTION='PewTube - The world's most creator friendly media hosting'
 META_IMAGE='https://pew.tube/full_size_logo.jpg'
 
+LOCAL_BACKUP_ON='true'
+LOCAL_BACKUP_DIRECTORY=''
 
 
 ## FILEHOST SETTINGS ##
