allow conditional serve files

--- a/.env.settings
+++ b/.env.settings
@@ -20,11 +20,17 @@ CUSTOM_FRAUD_DETECTION=false
 META_DESCRIPTION='PewTube - The world's most creator friendly media hosting'
 META_IMAGE='https://pew.tube/full_size_logo.jpg'
 
-LOCAL_BACKUP_ON='true'
+# serve from files that are saved locally
+LOCAL_BACKUP_ON='false'
 LOCAL_BACKUP_DIRECTORY=''
 
 
+
 ## FILEHOST SETTINGS ##
+SAVE_AND_SERVE_FILES='true'
+
+SAVE_AND_SERVE_FILES_DIRECTORY='/uploads'
+
 # sets the thumbnail server that will be posted to during editing of thumbnails for uploads and user ( to separate file hosting from the frontend)
 # if this is an empty string it will use the local route (aka api/upload/${upload.uniqueTag}/edit )
 THUMBNAIL_SERVER=
@@ -37,8 +43,6 @@ ALLOW_COR='false'
 
 # upload files to B2 hosting
 UPLOAD_TO_B2=false
-
-
 
 # mail listening scripts
 EMAIL_LISTENER_ON=false
