--- a/.env.settings
+++ b/.env.settings
@@ -10,8 +10,14 @@ UPLOAD_URL='/upload'
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
+
+
 ## CACHING SETTINGS ##
 CACHING_ON=off
+
+CACHE_INTERVAL_IN_MINUTES=6
+
+
 
 # custom fraud detection module
 CUSTOM_FRAUD_DETECTION=false
