show log location

--- a/.env.settings
+++ b/.env.settings
@@ -31,6 +31,8 @@ LOCAL_BACKUP_ON='false'
 LOCAL_BACKUP_DIRECTORY=''
 
 
+SHOW_LOG_LOCATION=true
+
 
 ## FILEHOST SETTINGS ##
 SAVE_AND_SERVE_FILES='true'
