add within string to popular

--- a/.env.settings
+++ b/.env.settings
@@ -31,7 +31,7 @@ LOCAL_BACKUP_ON='false'
 LOCAL_BACKUP_DIRECTORY=''
 
 
-SHOW_LOG_LOCATION=true
+SHOW_LOG_LOCATION=false
 
 
 ## FILEHOST SETTINGS ##
