--- a/.env.settings
+++ b/.env.settings
@@ -56,6 +56,7 @@ UPLOAD_TO_B2=false
 EMAIL_LISTENER_ON=false
 SAVE_SEEN_EMAILS=false
 
+FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON=false
 
 ## TECHNICAL ITEMS ##
 
