--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
     "validator": "^7.0.0",
-    "winston": "^2.4.2",
+    "winston": "^3.0.0-rc5",
     "ws": "^3.3.3",
     "youtube-dl": "git+https://github.com/backuprepos/node-youtube-dl.git",
     "youtube-node": "^1.3.2"
