--- a/.env.settings
+++ b/.env.settings
@@ -10,14 +10,12 @@ UPLOAD_URL='/upload'
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
-
+FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON='true'
 
 ## CACHING SETTINGS ##
 CACHING_ON=off
 
 CACHE_INTERVAL_IN_MINUTES=6
-
-
 
 # custom fraud detection module
 CUSTOM_FRAUD_DETECTION=false
@@ -56,17 +54,15 @@ UPLOAD_TO_B2=false
 EMAIL_LISTENER_ON=false
 SAVE_SEEN_EMAILS=false
 
-FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON=false
-
 ## TECHNICAL ITEMS ##
 
 MONGOOSE_DEBUG=off
 
 NODE_ENV='development'
 
-MONGODB_URI='mongodb://localhost:27017/april16pewtube'
-MONGOLAB_URI='mongodb://localhost:27017/april16pewtube'
-MONGO_URI='mongodb://localhost:27017/april16pewtube'
+MONGODB_URI='mongodb://localhost:27017/may23pewtube'
+MONGOLAB_URI='mongodb://localhost:27017/may23pewtube'
+MONGO_URI='mongodb://localhost:27017/may23pewtube'
 
 # set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
 WEB_CONCURRENCY=1
