add email functionality coming along

--- a/.env.settings
+++ b/.env.settings
@@ -11,6 +11,7 @@ UPLOAD_URL='/upload'
 UPLOAD_SERVER='/uploads'
 
 FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON='true'
+CONFIRM_USER_EMAIL_FUNCTIONALITY_ON='true'
 
 ## CACHING SETTINGS ##
 CACHING_ON=off
