--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ddos": "^0.1.24",
     "dotenv": "^4.0.0",
     "easy-backblaze": "^2.0.1",
+    "email-validator": "^2.0.3",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-flash": "^0.0.2",
