lots of changes

--- a/.env.settings
+++ b/.env.settings
@@ -22,8 +22,8 @@ CACHE_INTERVAL_IN_MINUTES=6
 CUSTOM_FRAUD_DETECTION=false
 
 # meta tags
-META_DESCRIPTION='PewTube - The world's most creator friendly media hosting'
-META_IMAGE='https://pew.tube/full_size_logo.jpg'
+META_DESCRIPTION='NodeTube - An open source file hosting platform built on NodeJS'
+# META_IMAGE='https://path.to/image.jpg'
 
 # serve from files that are saved locally
 LOCAL_BACKUP_ON='false'
