drag and drop among other things

--- a/.env.settings
+++ b/.env.settings
@@ -61,9 +61,9 @@ MONGOOSE_DEBUG=off
 
 NODE_ENV='development'
 
-MONGODB_URI='mongodb://localhost:27017/may15nodetube'
-MONGOLAB_URI='mongodb://localhost:27017/may15nodetube'
-MONGO_URI='mongodb://localhost:27017/may15nodetube'
+MONGODB_URI='mongodb://localhost:27017/july19nodetube'
+MONGOLAB_URI='mongodb://localhost:27017/july19nodetube'
+MONGO_URI='mongodb://localhost:27017/july19nodetube'
 
 # set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
 WEB_CONCURRENCY=1
