--- a/.env.settings
+++ b/.env.settings
@@ -2,6 +2,8 @@ LIVESTREAM_APP=false
 FILE_HOST=false
 FRONTEND=true
 
+RUN_NGROK=true
+
 
 ## FRONTEND SETTINGS ##
 # endpoint to hit during uploads
