--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "multer": "^1.4.1",
     "multiparty": "^4.2.1",
     "mv": "^2.1.1",
+    "ngrok": "^3.2.2",
     "node-cache": "^4.2.0",
     "node-ffprobe": "^1.2.2",
     "node-sass-middleware": "^0.11.0",
