all the actual functionality

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "memory": "node --max-old-space-size=4096 app.js",
     "cache": "node --max-old-space-size=8000 caching/runCaching.js",
     "both": "node --max-old-space-size=4096 app.js & node --max-old-space-size=8000 caching/runCaching.js",
-    "nodemonboth" : "nodemon --exec npm run both"
+    "nodemonboth": "nodemon --exec npm run both",
+    "installDeps" : "npm install && cd public && bower install && cd .."
   },
   "dependencies": {
     "apicache": "^1.4.0",
@@ -78,6 +79,7 @@
     "ngrok": "^3.2.2",
     "node-cache": "^4.2.0",
     "node-ffprobe": "^1.2.2",
+    "node-sass": "^4.13.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^3.1.7",
     "nodemailer-mailgun-transport": "^1.4.0",
