--- a/.env.settings
+++ b/.env.settings
@@ -38,7 +38,7 @@ SHOW_LOG_LOCATION=false
 ## FILEHOST SETTINGS ##
 SAVE_AND_SERVE_FILES='true'
 
-SAVE_AND_SERVE_FILES_DIRECTORY='/uploads'
+SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
 
 # sets the thumbnail server that will be posted to during editing of thumbnails for uploads and user ( to separate file hosting from the frontend)
 # if this is an empty string it will use the local route (aka api/upload/${upload.uniqueTag}/edit )
