--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node --max-old-space-size=4096 app.js",
     "test": "mocha --reporter spec",
-    "postinstall": "npm rebuild node-sass",
+    "postinstall": "npm rebuild node-sass && cd public && bower install",
     "eslint": "eslint **/*.js",
     "dev": "nodemon -e pug,js app.js",
     "memory": "node --max-old-space-size=4096 app.js",
