first user is admin

--- a/.env.settings
+++ b/.env.settings
@@ -64,9 +64,9 @@ MONGOOSE_DEBUG=off
 
 NODE_ENV='development'
 
-MONGODB_URI='mongodb://localhost:27017/july19nodetube'
-MONGOLAB_URI='mongodb://localhost:27017/july19nodetube'
-MONGO_URI='mongodb://localhost:27017/july19nodetube'
+MONGODB_URI='mongodb://localhost:27017/dec29nodetube'
+MONGOLAB_URI='mongodb://localhost:27017/dec29nodetube'
+MONGO_URI='mongodb://localhost:27017/dec29nodetube'
 
 # set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
 WEB_CONCURRENCY=1
@@ -75,7 +75,7 @@ WEB_CONCURRENCY=1
 CURRENT_UPLOAD_SERVER='uploads3'
 
 ## WIDGETS ##
-RECAPTCHA_ON=true
+RECAPTCHA_ON=false
 
 GOOGLE_ANALYTICS_ON=true
 
