more appjson stuff

--- a/.env.settings
+++ b/.env.settings
@@ -17,7 +17,7 @@ FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON='true'
 CONFIRM_USER_EMAIL_FUNCTIONALITY_ON='true'
 
 ## CACHING SETTINGS ##
-CACHING_ON=off
+CACHING_ON=true
 
 CACHE_INTERVAL_IN_MINUTES=6
 
