allow uploads to be turned off

--- a/.env.settings
+++ b/.env.settings
@@ -2,6 +2,8 @@ LIVESTREAM_APP=false
 FILE_HOST=false
 FRONTEND=true
 
+UPLOADS_ON=false
+
 RUN_NGROK=true
 
 CACHING_ON=true
@@ -20,7 +22,7 @@ CONFIRM_USER_EMAIL_FUNCTIONALITY_ON='true'
 ## CACHING SETTINGS ##
 CACHING_ON=true
 
-CACHE_INTERVAL_IN_MINUTES=6
+CACHE_INTERVAL_IN_MINUTES=5
 
 # custom fraud detection module
 CUSTOM_FRAUD_DETECTION=false
