--- a/.env.settings
+++ b/.env.settings
@@ -87,3 +87,6 @@ COINHIVE_ON=false
 ZOPIM_ON=true
 
 RESTRICT_UNTRUSTED_UPLOADS=true
+
+# level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
+RATING_ALLOWED=SFW
