--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "validator": "^7.0.0",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
-    "youtube-dl": "git+https://github.com/backuprepos/node-youtube-dl.git",
+    "youtube-dl": "^2.3.0",
     "youtube-node": "^1.3.3"
   },
   "devDependencies": {
