--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "start": "node --max-old-space-size=512 app.js",
     "test": "mocha --reporter spec",
 		"rebuild:sass": "npm rebuild node-sass",
-    "postinstall": "cd public && bower install",
+    "postinstall": "bower install",
     "eslint": "eslint **/*.js",
     "dev": "nodemon -e pug,js app.js",
     "memory": "node --max-old-space-size=4096 app.js",
     "cache": "node --max-old-space-size=8000 caching/runCaching.js",
     "both": "node --max-old-space-size=4096 app.js & node --max-old-space-size=8000 caching/runCaching.js",
     "nodemonboth": "nodemon --exec npm run both",
-    "installDeps": "npm install && cd public && bower install && cd .. && git update-index --skip-worktree .env.private && git update-index --skip-worktree .env.settings"
+    "installDeps": "npm install && bower install && git update-index --skip-worktree .env.private && git update-index --skip-worktree .env.settings"
   },
   "dependencies": {
     "apicache": "^1.4.0",
