--- a/.env.private.sample
+++ b/.env.private.sample
@@ -2,9 +2,9 @@
 
 SESSION_SECRET=setABetterSecretInProduction
 
-MONGODB_URI='mongodb://mongo:27017/nodetube'
-MONGOLAB_URI='mongodb://mongo:27017/nodetube'
-MONGO_URI='mongodb://mongo:27017/nodetube'
+MONGODB_URI='mongodb://localhost:27017/nodetube'
+MONGOLAB_URI='mongodb://localhost:27017/nodetube'
+MONGO_URI='mongodb://localhost:27017/nodetube'
 
 
 PEWTUBE_VERIFY_EMAIL_PASSWORD=
