fix some errors

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "mocha --reporter spec",
     "rebuild:sass": "npm rebuild node-sass",
     "postinstall": "bower install && cpy .env.settings.sample . --rename .env.settings --no-overwrite && cpy .env.private.sample . --rename .env.private --no-overwrite ",
-    "eslint": "eslint **/*.js",
+    "eslint": "eslint ./",
+    "eslint:fix": "./node_modules/.bin/eslint --fix .",
     "dev": "nodemon -e pug,js app.js",
     "memory": "node --max-old-space-size=4096 app.js",
     "cache": "node --max-old-space-size=8000 caching/runCaching.js",
