add domain name in settings

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -1,5 +1,8 @@
 # FILE CONTAINS KEYS THAT CAN'T BE SHARED
 
+DOMAIN_NAME_AND_TLD='https://nodetube.live'
+INSTANCE_BRAND_NAME='NodeTube'
+
 SESSION_SECRET=setABetterSecretInProduction
 
 MONGODB_URI='mongodb://localhost:27017/nodetube'
