update env files

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -9,6 +9,11 @@ MONGODB_URI='mongodb://localhost:27017/nodetube'
 MONGOLAB_URI='mongodb://localhost:27017/nodetube'
 MONGO_URI='mongodb://localhost:27017/nodetube'
 
+# endpoint to hit during uploads
+UPLOAD_URL='/upload'
+
+# set where the files themselves will be served from (/uploads is for serving from local machine)
+UPLOAD_SERVER='/uploads'
 
 NODETUBE_VERIFY_EMAIL_PASSWORD=
 EMAIL_HOST=
