--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,7 @@
 {
-  "name": "kurento-one2many-call",
-  "description": "Kurento Browser JavaScript Tutorial",
-  "authors": [
-    "Kurento <info@kurento.org>"
-  ],
+  "name": "NodeTube",
   "main": "index.html",
-  "moduleType": [
-    "globals"
-  ],
-  "license": "ALv2",
-  "homepage": "http://www.kurento.org/",
-  "private": true,
+  "homepage": "http://www.github.org/mayeaux/nodetube",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -19,11 +10,7 @@
     "tests"
   ],
   "dependencies": {
-    "adapter.js": "v0.2.9",
     "bootstrap": "~3.3.0",
-    "ekko-lightbox": "~3.3.0",
-    "demo-console": "1.5.1",
-    "kurento-utils": "master",
     "sweetalert2": "^7.3.4"
   }
 }
