some frontend changes

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -4,7 +4,11 @@ FRONTEND=true
 
 NODE_ENV='development'
 
+# functionality to disable uploads sitewide
 UPLOADS_ON=true
+
+# upload files to B2 hosting
+UPLOAD_TO_B2=false
 
 RUN_NGROK=true
 
@@ -48,9 +52,6 @@ THUMBNAIL_SERVER=
 FRONTEND_SERVER=''
 
 ALLOW_COR='false'
-
-# upload files to B2 hosting
-UPLOAD_TO_B2=false
 
 # mail listening scripts
 EMAIL_LISTENER_ON=false
