--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -79,3 +79,6 @@ ZOPIM_ON=true
 RESTRICT_UNTRUSTED_UPLOADS=false
 # level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
 RATING_ALLOWED=SFW
+
+# if Stripe is setup you can enable users to purchase Plus
+PLUS_ENABLED=false
