--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cheerio": "^0.22.0",
     "clockwork": "^0.1.4",
     "clone": "^2.1.2",
+    "command-exists": "^1.2.8",
     "compression": "^1.7.4",
     "concat-files": "^0.1.1",
     "connect-mongo": "^1.3.2",
