--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -4,6 +4,11 @@ FRONTEND=true
 
 NODE_ENV='development'
 
+# require uploads to be moderated to be pubilcly visible
+# false means posts show up publicly visible
+# true means they need to be moderated
+RESTRICT_UNTRUSTED_UPLOADS=false
+
 # functionality to disable uploads sitewide
 UPLOADS_ON=true
 
@@ -76,9 +81,7 @@ COINHIVE_ON=false
 
 ZOPIM_ON=true
 
-RESTRICT_UNTRUSTED_UPLOADS=false
 # level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
 RATING_ALLOWED=SFW
 
-# if Stripe is setup you can enable users to purchase Plus
 PLUS_ENABLED=false
