almost done discord webhook alert

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "mv": "^2.1.1",
     "ngrok": "^3.2.2",
     "node-cache": "^4.2.0",
+    "node-fetch": "^2.6.0",
     "node-ffprobe": "^1.2.2",
     "node-sass": "^4.13.0",
     "node-sass-middleware": "^0.11.0",
@@ -109,6 +110,7 @@
     "twilio": "^3.31.0",
     "twit": "^2.2.11",
     "validator": "^7.0.0",
+    "webhook-discord": "^3.5.1",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
     "youtube-dl": "^2.3.0",
