--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -31,7 +31,7 @@ CUSTOM_FRAUD_DETECTION=false
 
 # meta tags
 META_DESCRIPTION='NodeTube - An open source file hosting platform built on NodeJS'	
-# META_IMAGE='https://path.to/image.jpg'
+META_IMAGE=http://nodetube.live/images/full_size_logo.png
 
 # serve from files that are saved locally
 LOCAL_BACKUP_ON='false'
