update about page

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -30,7 +30,7 @@ CACHE_INTERVAL_IN_MINUTES=5
 CUSTOM_FRAUD_DETECTION=false
 
 # meta tags
-META_DESCRIPTION='NodeTube - An open source file hosting platform built on NodeJS'	
+META_DESCRIPTION=NodeTube - An open source file hosting platform built on NodeJS
 META_IMAGE=http://nodetube.live/images/full_size_logo.png
 
 # serve from files that are saved locally
