change default settings file

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -1,50 +1,69 @@
-LIVESTREAM_APP=false
-FILE_HOST=false
+# NodeTube Settings. Use this file to turn functionality off and on.
+# Whereas .env.private should be 'set and forget' and are private,
+# .env.settings are less sensitive and changed more often.
+
+## TECHNICAL SETTINGS ##
+
+# determine which routes you want activated:
+# has all web app routes, allows users to interact with file hosting
 FRONTEND=true
 
+# whether you want to run the app specifically to receive uploads and serve files
+FILE_HOST=false
+
+# whether to run authentication routes and fileserving for livestreaming
+LIVESTREAM_APP=false
+
+# set node env
 NODE_ENV='development'
 
-# require uploads to be moderated to be pubilcly visible
-# false means posts show up publicly visible
-# true means they need to be moderated
-RESTRICT_UNTRUSTED_UPLOADS=false
+# set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
+WEB_CONCURRENCY=1
 
-# functionality to disable uploads sitewide
-UPLOADS_ON=true
+## FILEHOST SETTINGS ##
+# whether to save files to local directory and serve them locally
+SAVE_AND_SERVE_FILES='true'
 
-# upload files to B2 hosting
+# local directory from which to serve files
+SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
+
+# whether to allow cross-origin-requests (use if using app as file_host)
+ALLOW_COR=false
+
+# upload files to B2 hosting using built-in integration (keys in .env.private file)
 UPLOAD_TO_B2=false
 
-RUN_NGROK=true
+# whether to run ngrok from app.js
+RUN_NGROK=false
 
-## CACHING SETTINGS ##
-CACHING_ON=true
-LOG_CACHING=false
-
-FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON='true'
-CONFIRM_USER_EMAIL_FUNCTIONALITY_ON='true'
-
-CACHE_INTERVAL_IN_MINUTES=5
-
-# custom fraud detection module
+# algorithm to mitigate viewbotting
 CUSTOM_FRAUD_DETECTION=false
 
-# meta tags
+## CACHING SETTINGS ##
+# whether to cache db results into redis
+CACHING_ON=false
+
+# whether to activate caching logs coming through the console
+LOG_CACHING=false
+
+# email functionality
+FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON=false
+CONFIRM_USER_EMAIL_FUNCTIONALITY_ON=false
+
+# how long caching functionality should be run
+CACHE_INTERVAL_IN_MINUTES=5
+
+
+# meta tags for online sharing
 META_DESCRIPTION=NodeTube - An open source file hosting platform built on NodeJS
 META_IMAGE=http://nodetube.live/images/full_size_logo.png
 
 # serve from files that are saved locally
-LOCAL_BACKUP_ON='false'
+LOCAL_BACKUP_ON=false
 LOCAL_BACKUP_DIRECTORY=''
 
-
+# show location of log in console (helper function)
 SHOW_LOG_LOCATION=false
-
-
-## FILEHOST SETTINGS ##
-SAVE_AND_SERVE_FILES='true'
-
-SAVE_AND_SERVE_FILES_DIRECTORY='./uploads'
 
 # sets the thumbnail server that will be posted to during editing of thumbnails for uploads and user ( to separate file hosting from the frontend)
 # if this is an empty string it will use the local route (aka api/upload/${upload.uniqueTag}/edit )
@@ -54,21 +73,15 @@ THUMBNAIL_SERVER=
 # if this is an empty string it will use the local route
 FRONTEND_SERVER=''
 
-ALLOW_COR='false'
-
 # mail listening scripts
 EMAIL_LISTENER_ON=false
 SAVE_SEEN_EMAILS=false
 
-## TECHNICAL ITEMS ##
-
+# whether to have mongoose logs come through console
 MONGOOSE_DEBUG=off
 
-# set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
-WEB_CONCURRENCY=1
-
 # incomplete #
-CURRENT_UPLOAD_SERVER='uploads3'
+CURRENT_UPLOAD_SERVER=uploads3
 
 ## WIDGETS ##
 RECAPTCHA_ON=false
@@ -79,11 +92,23 @@ COINHIVE_ON=false
 
 ZOPIM_ON=true
 
+# ADMIN SETTINGS #
+# require uploads to be moderated to be pubilcly visible
+# false means posts show up publicly visible
+# true means they need to be moderated
+RESTRICT_UNTRUSTED_UPLOADS=false
+
+# functionality to disable uploads sitewide
+UPLOADS_ON=true
+
 # level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
 RATING_ALLOWED=SFW
 
+# whether users can purchase access to advanced features in freemium model
 PLUS_ENABLED=false
 
+# whether moderation requests are sent to discord
 MODERATION_UPDATES_TO_DISCORD=false
 
+#
 GET_CACHE=true
