support hvec and 4 4 4 4 profiles

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -1,10 +1,10 @@
-# FILE CONTAINS KEYS THAT CAN'T BE SHARED
+# File which contains keys and other 'set and forget' information
 
+# Used in link creation and in the frontend
 DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
 
-SESSION_SECRET=setABetterSecretInProduction
-
+# Where to run Mongo from. Multiple env vars to cover multiple hosting platforms
 MONGODB_URI='mongodb://localhost:27017/nodetube'
 MONGOLAB_URI='mongodb://localhost:27017/nodetube'
 MONGO_URI='mongodb://localhost:27017/nodetube'
@@ -15,6 +15,7 @@ UPLOAD_URL='/upload'
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
+# info
 BACKBLAZE_HOST_URL=
 BACKBLAZE_ACCOUNT_ID=
 BACKBLAZE_APP_KEY=
@@ -54,4 +55,5 @@ NGROK_AUTHTOKEN=
 # like nt instead of nt.ngrok.io
 NGROK_SUBDOMAIN=
 
-REDIS_URL=
+# Change this to any secure secret if running in production
+SESSION_SECRET=setABetterSecretInProduction
