better docs for private file

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -15,44 +15,56 @@ UPLOAD_URL='/upload'
 # set where the files themselves will be served from (/uploads is for serving from local machine)
 UPLOAD_SERVER='/uploads'
 
-# info
+# values to set to allow backblaze uploads and file serving
 BACKBLAZE_HOST_URL=
 BACKBLAZE_ACCOUNT_ID=
 BACKBLAZE_APP_KEY=
 BACKBLAZE_BUCKET=
 
+# setup for nodemailer to send verification emails
 NODETUBE_VERIFY_EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_ADDRESS=
 
+# mailgun integration for sending emails
 MAILGUN_API_KEY='exampleApiKey14134'
 MAILGUN_DOMAIN='example.domain.com'
 
+# google recaptcha setup for registrations
 RECAPTCHA_SITEKEY=
 RECAPTCHA_SECRETKEY=
 
+# stripe integration key for monetization
 STRIPE_API_KEY=
 
+# ifttt token for posting content to social media
 IFTTT_TOKEN=
 
+# integration for posting to facebook
 FACEBOOK_APP_TOKEN=
 FACEBOOK_ID=
 FACEBOOK_PAGE_ID=
 
+# google analytics setup
 GOOGLE_ANALYTICS_ID=
 
+# coinminer (delete for time being)
 COINHIVE_IDENTIFIER=
 
+# unique tag for zopim
 ZOPIM_IDENTIFIER=
 
+# youtube client for allowing youtube oauth login
 YOUTUBE_CLIENT_ID=
 YOUTUBE_CLIENT_SECRET=
 
+# discord authentication for moderation alerts
 DISCORD_MODERATION_WEBHOOK_URL=
 
+# auth token for built ngrok's app.js integration
 NGROK_AUTHTOKEN=
 
-# like nt instead of nt.ngrok.io
+# value like nodetube ( not nodetube.ngrok.io )
 NGROK_SUBDOMAIN=
 
 # Change this to any secure secret if running in production
