--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "memory": "node --max-old-space-size=4096 app.js",
     "cache": "node --max-old-space-size=8000 caching/runCaching.js",
     "both": "node --max-old-space-size=4096 app.js & node --max-old-space-size=8000 caching/runCaching.js",
-    "nodemonboth": "nodemon --exec npm run both"
+    "nodemonboth": "nodemon --exec npm run both",
+    "ngrok" : "./node_modules/ngrok/bin/ngrok http 3000"
   },
   "dependencies": {
     "apicache": "^1.4.0",
