--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -17,6 +17,9 @@ LIVESTREAM_APP=false
 # set node env
 NODE_ENV='development'
 
+# whether to run ngrok from app.js
+RUN_NGROK=true
+
 # set web_concurrency for cluster API (livestream server should only equal 1, otherwise websockets don't work)
 WEB_CONCURRENCY=1
 
@@ -33,15 +36,12 @@ ALLOW_COR=false
 # upload files to B2 hosting using built-in integration (keys in .env.private file)
 UPLOAD_TO_B2=false
 
-# whether to run ngrok from app.js
-RUN_NGROK=false
-
 # algorithm to mitigate viewbotting
 CUSTOM_FRAUD_DETECTION=false
 
 ## CACHING SETTINGS ##
 # whether to cache db results into redis
-CACHING_ON=false
+CACHING_ON=true
 
 # whether to activate caching logs coming through the console
 LOG_CACHING=false
