--- a/.env.private.sample
+++ b/.env.private.sample
@@ -1,6 +1,7 @@
 # File which contains keys and other 'set and forget' information
 
 # Used in link creation and in the frontend
+# brand name is also tied into the meta tags from the media page
 DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
 
