save point almost done

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -70,3 +70,5 @@ NGROK_SUBDOMAIN=
 
 # Change this to any secure secret if running in production
 SESSION_SECRET=setABetterSecretInProduction
+
+#REDIS_URL=
