add domain name to .env.private and also res.locals

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -4,6 +4,7 @@
 # brand name is also tied into the meta tags from the media page
 DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
+INSTANCE_DOMAIN_NAME='nodetube.live'
 
 # Where to run Mongo from. Multiple env vars to cover multiple hosting platforms
 MONGODB_URI='mongodb://localhost:27017/nodetube'
