--- a/.env.private.sample
+++ b/.env.private.sample
@@ -6,6 +6,8 @@ DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
 INSTANCE_DOMAIN_NAME='nodetube.live'
 
+INSTANCE_CONTACT_EMAIL='ceo@nodetube.live'
+
 # Where to run Mongo from. Multiple env vars to cover multiple hosting platforms
 MONGODB_URI='mongodb://localhost:27017/nodetube'
 MONGOLAB_URI='mongodb://localhost:27017/nodetube'
