add cache recent interval to sample settings

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -46,13 +46,15 @@ CACHING_ON=true
 # whether to activate caching logs coming through the console
 LOG_CACHING=false
 
-# email functionality
-FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON=false
-CONFIRM_USER_EMAIL_FUNCTIONALITY_ON=false
-
 # how long caching functionality should be run
 CACHE_INTERVAL_IN_MINUTES=5
 
+# cache interval for recent uploads
+CACHE_RECENT_INTERVAL_IN_MINUTES=1
+
+# email functionality
+FORGOT_PASSWORD_EMAIL_FUNCTIONALITY_ON=false
+CONFIRM_USER_EMAIL_FUNCTIONALITY_ON=false
 
 # meta tags for online sharing
 META_DESCRIPTION=NodeTube - An open source file hosting platform built on NodeJS
