--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -58,7 +58,7 @@ CONFIRM_USER_EMAIL_FUNCTIONALITY_ON=false
 
 # meta tags for online sharing
 META_DESCRIPTION=NodeTube - An open source file hosting platform built on NodeJS
-META_IMAGE=http://nodetube.live/images/full_size_logo.png
+META_IMAGE=https://nodetube.live/images/full_size_logo.png
 
 # serve from files that are saved locally
 LOCAL_BACKUP_ON=false
