--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "twit": "^2.2.11",
     "validator": "^7.0.0",
     "webhook-discord": "^3.5.1",
+    "webtorrent-hybrid": "^4.0.1",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
     "youtube-dl": "^2.3.0",
