add popular default as env var setting

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -100,6 +100,10 @@ ZOPIM_ON=true
 # true means they need to be moderated
 RESTRICT_UNTRUSTED_UPLOADS=false
 
+// show all or categories page via popular on header
+// set default to all, other option 'overview'
+POPULAR_DEFAULT='all'
+
 # functionality to disable uploads sitewide
 UPLOADS_ON=true
 
