--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/mayeuax/nodetube"
   },
   "engines": {
-		"node": "^8 || ^10"
+    "node": "8.17.0"
   },
   "author": "Anthony Mayfield",
   "license": "MIT",
