touchups and bugfixes

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -92,7 +92,7 @@ GOOGLE_ANALYTICS_ON=false
 
 COINHIVE_ON=false
 
-ZOPIM_ON=true
+ZOPIM_ON=false
 
 # ADMIN SETTINGS #
 # require uploads to be moderated to be pubilcly visible
