--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -122,3 +122,5 @@ GET_CACHE=true
 # this is loaded on the model to determine how the max size of an upload when user is created
 DEFAULT_MAX_UPLOAD_SIZE_IN_MB=500
 
+# allow users to buy a Plus subscription for the site
+PLUS_ENABLED=false
