add stripe frontend token

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -38,8 +38,11 @@ MAILGUN_DOMAIN='example.domain.com'
 RECAPTCHA_SITEKEY=
 RECAPTCHA_SECRETKEY=
 
-# stripe integration key for monetization
+# stripe api key for backend calls
 STRIPE_API_KEY=
+
+# stripe frontend token for identification
+STRIPE_FRONTEND_TOKEN=
 
 # ifttt token for posting content to social media
 IFTTT_TOKEN=
