add meta desc and img

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -6,6 +6,11 @@ DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
 INSTANCE_DOMAIN_NAME='nodetube.live'
 
+# meta tags for online sharing
+# meta tags for online sharing
+META_DESCRIPTION=
+META_IMAGE=
+
 INSTANCE_CONTACT_EMAIL='ceo@nodetube.live'
 
 # Where to run Mongo from. Multiple env vars to cover multiple hosting platforms
