--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -107,8 +107,8 @@ POPULAR_DEFAULT='all'
 # functionality to disable uploads sitewide
 UPLOADS_ON=true
 
-# level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
-RATING_ALLOWED=SFW
+# level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENSITIVE]
+MAX_RATING_ALLOWED=SFW
 
 # whether users can purchase access to advanced features in freemium model
 PLUS_ENABLED=false
