--- a/.env.private.sample
+++ b/.env.private.sample
@@ -6,8 +6,8 @@ DOMAIN_NAME_AND_TLD='https://nodetube.live'
 INSTANCE_BRAND_NAME='NodeTube'
 INSTANCE_DOMAIN_NAME='nodetube.live'
 
-LIVESTREAM_RTMP_DOMAIN='https://broadcast.nodetube.live'
-LIVESTREAM_VIEWING_DOMAIN='https://livestream.nodetube.live'
+#LIVESTREAM_RTMP_DOMAIN='https://broadcast.nodetube.live'
+#LIVESTREAM_VIEWING_DOMAIN='https://livestream.nodetube.live'
 
 INSTANCE_CONTACT_EMAIL='ceo@nodetube.live'
 
