change websockets port

--- a/docs/nginx-production-livestreaming.conf
+++ b/docs/nginx-production-livestreaming.conf
@@ -72,6 +72,9 @@ http {
             }
     }
 
+    client_max_body_size 3000M;
+
+    limit_req_zone  $binary_remote_addr  zone=default:10m   rate=50r/m;
 
 }
 
