--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "forever": "^2.0.0",
     "formidable": "^1.2.1",
     "fs-extra": "^4.0.3",
+    "get-audio-duration": "^1.0.0",
+    "get-video-duration": "^1.0.3",
     "heroku-ssl-redirect": "0.0.4",
     "intl-messageformat": "^1.3.0",
     "ipstack": "^0.1.1",
