--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -125,5 +125,5 @@ DEFAULT_MAX_UPLOAD_SIZE_IN_MB=500
 # allow users to buy a Plus subscription for the site
 PLUS_ENABLED=false
 
-# enable thumbnail sphere in home screen
-HOME_SPHERE_ENABLED=true
+# default landing page [default, globe]
+DEFAULT_LANDING_PAGE=default
