--- a/.env.private.sample
+++ b/.env.private.sample
@@ -28,7 +28,10 @@ BACKBLAZE_ACCOUNT_ID=
 BACKBLAZE_APP_KEY=
 BACKBLAZE_BUCKET=
 
-# setup for nodemailer to send verification emails and notifications
+# setup for nodemailer to send verification emails
+NODETUBE_VERIFY_EMAIL_PASSWORD=
+
+# setup for nodemailer to send notifications
 EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_ADDRESS=
