--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -127,3 +127,6 @@ PLUS_ENABLED=false
 
 # default landing page [default, globe]
 DEFAULT_LANDING_PAGE=default
+
+# whether emails are setup to send account confirmation emails
+CONFIRM_EMAIL_FUNCTIONALITY_ON=false
