stripe functionality coming along

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -47,6 +47,9 @@ STRIPE_API_KEY=
 # stripe frontend token for identification
 STRIPE_FRONTEND_TOKEN=
 
+#stripe plan name
+STRIPE_PLAN_NAME
+
 # ifttt token for posting content to social media
 IFTTT_TOKEN=
 
