categories default to one week

--- a/docs/nginx-production-livestreaming.conf
+++ b/docs/nginx-production-livestreaming.conf
@@ -81,11 +81,11 @@ rtmp {
                 chunk_size 4096;
 
                 application live {
-                        live on;
-                        record all;
-                        record_append on;
-                        record_suffix &%Y%m%d%H%M%S.flv;
-                        record_path /home/anthony/newtubeprod/recordings;
+                        # live on;
+                        # record all;
+                        # record_append on;
+                        # record_suffix &%Y%m%d%H%M%S.flv;
+                        # record_path /home/anthony/newtubeprod/recordings;
 
                         on_publish http://localhost:3000/livestream/on-live-auth;
                         on_publish_done http://localhost:3000/livestream/on-live-done;
