--- a/docs/nginx-production-livestreaming.conf
+++ b/docs/nginx-production-livestreaming.conf
@@ -82,6 +82,10 @@ rtmp {
 
                 application live {
                         live on;
+                        record all;
+                        record_append on;
+                        record_suffix &%Y%m%d%H%M%S.flv;
+                        record_path /home/anthony/newtubeprod/recordings;
 
                         on_publish http://localhost:3000/livestream/on-live-auth;
                         on_publish_done http://localhost:3000/livestream/on-live-done;
@@ -91,12 +95,6 @@ rtmp {
                         # hls_playlist_length 10m;
                         hls_fragment 10s;
                         # hls_cleanup off;
-
-                        # record all;
-                        # record_append on;
-                        # record_suffix &%Y%m%d%H%M%S.flv;
-                        # record_path /home/anthony/newtubeprod/recordings;
-
                 }
         }
 }
