--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "8"
+before_script:
+- sudo apt-get update
+- sudo apt-get install ffmpeg
 cache:
   directories:
     - "node_modules"
